--- a/styles/Subject.module.scss
+++ b/styles/Subject.module.scss
@@ -718,6 +718,7 @@
                 font-size: 0.9rem;
                 width: 100%;
                 overflow-wrap: break-word;
+                word-break: break-all;
             }
         }
 
